<resources>
    <string name="app_name">FYP_UTEC</string>
    <string name="username">User Name</string>
    <string name="login_phrase">Login</string>
    <string name="signup_phrase">Sign Up</string>
    <string name="Password_phrase">Password</string>
    <string name="email_phrase">Email</string>
    <string name="create_account">Create Account Now</string>
    <string name="featuredby"> Presented To You By UOL SE Students</string>
    <string name="Cancel">Cancel</string>
    <string name="alreadyacc">Already Have an Account</string>
    <string name="input_placeholder">Write a message</string>
    <string name="friendlist_phrase">Friend List</string>
    <string name="chat_phrase">Chat</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="delete_account">Delete Account</string>
    <string name="recover_password">Recover Password</string>
    <string name="switchtoguest">Switch To Guest</string>
    <string name="guest_user_account">Guest User Account</string>
    <string name="signout">Sign Out</string>
    <string name="validationcheckbox">Validation Check Box</string>
    <string name="friendreqlist">Friend Requests List</string>
    <string name="friendreq">New Friend Request</string>
    <string name="acceptfriendrequest">ACCEPT Request</string>
    <string name="rejectfriendrequest">Reject Request</string>
    <string name="writemessage">Write A Message</string>
    <string name="sendby">Send By</string>
    <string name="question_addfriend">How To Add Friend?</string>
    <string name="question_removefriend">How To Remove Friend?</string>
    <string name="question_dellchatandaccount">Will deleting account delete all the chat?</string>
    <string name="question_guestuser">What is Guest User?</string>
    <string name="question_removefrnddellchat">will removing a friend delete chat?</string>
    <string name="question_canclassifyenglish">Can Algorithm classify English sentence?</string>
    <string name="answer_removefriend">Go to -> Settings -> Remove Friend -> Insert Email -> Press Add Friend -> Wait for Conformation</string>
    <string name="answer_addfriend">Go to -> Settings -> Add Friend -> Insert Email -> Press Add Friend -> Wait for Conformation</string>
    <string name="answer_dellaccout_dellchat">Yes! If you delete account it will delete your all the chat with other users, and remove you from their friend list</string>
    <string name="answer_guestaccount">Guest is a sign out limited account, that covers all the functionalites but until you sign out.</string>
    <string name="answer_removefrnd_dellchat">No! When you Unfriend someone, we store the chat so if you became friends again so we can show you.</string>
    <string name="answer_can_classify">No! The Algorithm can only Classify the Urdu Sentences.</string>
</resources>
