<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_friendlayout"
            android:layout_width="92dp"
            android:layout_height="24dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/username"
            android:textColor="@color/friend_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/email_friendlayout"
            android:layout_width="291dp"
            android:layout_height="24dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/email_phrase"
            android:textColor="@color/friend_name"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rmvfriend_friendlayout"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/remove_friend"
            android:textColor="@color/friend_name" />
    </LinearLayout>

</LinearLayout>