<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/androidloginbackground"
    android:orientation="vertical">
    <!--
    <include layout="@layout/headerlayout"/>
    -->

    <Button
        android:id="@+id/btn_login_signin"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_phrase"
        android:textColor="@color/friend_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <Button
        android:id="@+id/btn_forgetpassword_signin"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password"
        android:textColor="@color/friend_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <Button
        android:id="@+id/btn_signup_at_login"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:text="@string/signup_phrase"
        android:textColor="@color/friend_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="141dp"
        android:layout_height="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:text="@string/create_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_signup_at_login"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209">

        <TextView
            android:id="@+id/textView5"
            style="@android:style/Widget.DeviceDefault.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login_phrase"
            android:textColor="@color/friend_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enter_email_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:hint="@string/email_phrase" />

        <EditText
            android:id="@+id/enter_password_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:autofillHints="@string/Password_phrase"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Password_phrase"
            android:inputType="textPassword" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>