<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/androidsignupbackground"
    android:orientation="vertical">
    <!--
    <include layout="@layout/headerlayout"/>
    -->
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="559dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/signup_phrase"
            android:textColor="@color/friend_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enter_name_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:hint="First Name" />

        <EditText
            android:id="@+id/enter_lastname_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="Last Name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/enter_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_phrase"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/enter_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Password_phrase"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/progressBar_signup"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_signup_at_signup"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/signup_phrase"
                android:textColor="@color/friend_name"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_login_signin"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/Cancel"
                android:textColor="@color/friend_name"
                android:textSize="18sp" />

            <Button
                android:id="@+id/signup_guestuser_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="As Guest User"
                android:textColor="@color/friend_name"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/alreadyacc"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_login_at_signup"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowColor="@color/colorPrimary"
                android:text="@string/login_phrase"
                android:textColor="@color/friend_name"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="10px"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/featuredby"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>